New algorithm is a generalisation of FindDeadDetectors that also rejects high counting detectors.  Whether the spectra was reading high or low is recorded in the file output but currently not the output workspace refs #599

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FindDetectorsOutsideLimits.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FindPeaks.cpp"
 				>
 			</File>
@@ -562,6 +566,14 @@
 			</File>
 			<File
 				RelativePath=".\test\FindDeadDetectorsTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\FindDetectorsOutsideLimits.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\FindDetectorsOutsideLimitsTest.h"
 				>
 			</File>
 			<File
