I wrote a small helper class that reduces the amount of code needed to query detectors and access detector maps, don't know how good it is.  A new diagnostics algorithm, DetectorEfficiencyVariation, looks at white beam vanadium runs taken before and after measurements and rejects detectors whose performance changes. refs #601

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -235,6 +235,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\DetectorEfficiencyVariation.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\DiffractionFocussing.cpp"
 				>
 			</File>
@@ -291,11 +295,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\InputWSDetectorInfo.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LOQScriptInput.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\src\MaskBins.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MaskDetectorsIf.cpp"
 				>
 			</File>
 			<File
@@ -537,6 +549,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\DetectorEfficiencyVariation.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\DetectorEfficiencyVariationTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\DiffractionFocussing.h"
 				>
 			</File>
@@ -617,11 +637,19 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\InputWSDetectorInfo.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\LOQScriptInput.h"
 				>
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\MaskBins.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\MaskDetectorsIf.h"
 				>
 			</File>
 			<File
