--- a/Code/Mantid/PythonAPI/SConscript
+++ b/Code/Mantid/PythonAPI/SConscript
@@ -1,6 +1,7 @@
 #For MantidPythonAPI
 
 import os
+import sys
 import MantidBuild
 
 #GET LIST OF CPPS
@@ -11,9 +12,15 @@ listCpps = MantidBuild.getCPPFiles(codeFolder)
 Import('env')
 myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_PYTHON_API',1)])
+if os.name == 'posix':
+   #env.Append(CPPPATH='/usr/include/python' + sys.version[0:3])
+   myenv.Append(MYLIBLIST='python' + sys.version[0:3])
+   myenv.Replace(SHLIBSUFFIX='.so')
+else:
+   myenv.Replace(SHLIBSUFFIX='.pyd')
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 
 #BUILD CODE
-shared = myenv.SharedLibrary('lib/MantidPythonAPI', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidPythonAPI.pdb')
+shared = myenv.SharedLibrary('lib/MantidPythonAPI', listCpps, LIBS=myenv['MYLIBLIST'], LIBPATH=myenv['MYLIBDIRLIST'], PDB='lib/MantidPythonAPI.pdb')
 retval = { 'shared': shared, 'sharedobjs' : listSharedObjects, 'libs': [ 'MantidPythonAPI' ] }
 Return('retval')
