--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -26,7 +26,7 @@ opts.Add('debug','Set to 1 to build debug', 0)
 opts.Add('matlab','Set to 1 to build matlab API', 0)
 
 env = Environment(ENV=os.environ, options = opts)
-Help(opts.GenerateHelpText(base_env))
+Help(opts.GenerateHelpText(env))
 debug = ARGUMENTS.get('debug', 0)
 matlab = ARGUMENTS.get('matlab', 0)
 #get libraries and the library directories
