Fix test SetScalingPSD which failed as a consequence of change to Merlin IDF, used more succinct way of getting detectors in test (as pointed out by Martyn), improved throw message in getDetector method of Instrument. Refs #595.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -419,6 +419,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SubtractTimeFinal.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SumSpectra.cpp"
 				>
 			</File>
@@ -846,6 +850,10 @@
 			</File>
 			<File
 				RelativePath=".\test\StripPeaksTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\SubtractTimeFinal.h"
 				>
 			</File>
 			<File
