Didn't initially spot there are two SetScalingPSD tests. Modified SetScalingPSDRawTest also. Refs #595.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -511,6 +511,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\SetScalingPSDrawtest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\SetScalingPSDtest.h"
 				>
 			</File>
