Allow empty value in ListValidator if it's on the list of allowed values plus a bit of tidying up in the validators. Re #501.

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -227,6 +227,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ListValidator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\LogFilter.cpp"
 				>
 			</File>
