Improved speed of loading raw files over the network. Reading of the log files is the slowest operation. re #760

--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Glob.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IPropertyManager.cpp"
 				>
 			</File>
@@ -382,6 +386,10 @@
 			</File>
 			<File
 				RelativePath=".\test\FilterChannelTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidKernel\Glob.h"
 				>
 			</File>
 			<File
