Try to use gcc43 on RHEL5. Refs #762.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -24,11 +24,22 @@ MANTIDPLUGINS = '/opt/Mantid/plugins'
 opts = Options('scons_options.py')
 opts.Add('debug','Set to 1 to build debug', 0)
 opts.Add('matlab','Set to 1 to build matlab API', 0)
+opts.Add('gcc43','Set to 1 to build with gcc43 on RHEL5', 0)
 
 env = Environment(ENV=os.environ, options = opts)
 Help(opts.GenerateHelpText(env))
 debug = ARGUMENTS.get('debug', 0)
 matlab = ARGUMENTS.get('matlab', 0)
+
+# on RHEL5 gcc 4.1 is the default
+# gcc 4.3 installed under a different name
+gcc43 = ARGUMENTS.get('gcc43', 0)
+if int(gcc43) :
+    env["CC"] = "gcc43"
+    env["CXX"] = "g++43"
+    env["SHCC"] = "gcc43"
+    env["SHCXX"] = "g++43"
+    
 #get libraries and the library directories
 print 'Current path == ',os.getcwd()
 cwdpath=os.getcwd()
