Disable any asserts if compiling in release mode. Re #454.

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -266,7 +266,11 @@ else:
     lpts.append('/MACHINE:X64')
     env.Append(LINKFLAGS=lpts)
     print 'LINKFLAGS: ',lpts
-  
+
+#Disable assert macro.
+if int(debug) == 0:
+  env.Append(CPPDEFINES='NDEBUG')
+
 #Export for SConscripts
 env.Append(CCFLAGS=cflags)
 env.Append(CPPPATH=cppPaths)
